# cloud-files

./: .travis.yml  AUTHORS  ChangeLog  LICENSE  MANIFEST.in  README.md  automated_test.py  cli.py  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml  test-suite.yml
cloudfiles/: __init__.py  cloudfiles.py  compression.py  connectionpools.py  exceptions.py  gcs.py  interfaces.py  lib.py  monitoring.py  paths.py  resumable_tools.py  scheduler.py  secrets.py  threaded_queue.py  typing.py
cloudfiles_cli/: LICENSE  __init__.py  cloudfiles_cli.py  listing_db.py
