[metadata]
name = cloud-files
url = https://github.com/seung-lab/cloud-files/
summary = Fast access to cloud storage and local FS.
description-content-type = text/markdown
description-file = README.md
author = William Silversmith
author-email = ws9@princeton.edu
home-page = https://github.com/seung-lab/cloud-files/
license = BSD
classifier =
    Intended Audience :: Developers
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages = cloudfiles

[extras]
test =
    pytest
    moto
numpy =
    numpy