[metadata]
name = cloud-files
url = https://github.com/seung-lab/cloud-files/
summary = Fast access to cloud storage and local FS.
description_content_type = text/markdown
description_file = README.md
author = William Silversmith
author_email = ws9@princeton.edu
home-page = https://github.com/seung-lab/cloud-files/
license = License :: OSI Approved :: BSD License
classifier =
    Intended Audience :: Developers
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Software Development :: Libraries :: Python Modules

[global]
setup_hooks = pbr.hooks.setup_hook

[files]
packages = 
    cloudfiles
    cloudfiles_cli

[extras]
test =
    pytest
    moto>=5
numpy =
    numpy